# pdf-to-audiobook

./: .env.example  .gitignore  IDENTITY.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
apps/tts-local/: .gitignore  README.md  pyproject.toml  run_local_tts.sh  test_server.py
apps/tts-local/tts_local/: server.py
apps/web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
apps/web/src/: highlight.ts  main.ts  pdf.ts  player.ts  sentences.ts  style.css  ttsClient.ts
apps/web/tests/: e2e-read.spec.ts  highlight-contract.spec.ts
branches/: BASE_POLICY.md
branches/feat-codex/: AGENT.md
branches/feat-gemini/: AGENT.md
branches/feat-kimi/: AGENT.md
deploy/: Dockerfile.tts  Dockerfile.web  README.md  docker-compose.demo.yml  tts.Dockerfile
schemas/: runOutput.schema.json
scripts/: apply_artifacts.py  demo_build_web.sh  demo_run_tts.sh  make_fixture_pdf.py
src/: cli.ts  config.ts  orchestrator.ts  types.ts
src/adapters/: baseCli.ts  codex.ts  gemini.ts  kimi.ts  kimiApi.ts  openclawAgent.ts
src/compare/: scoring.ts
src/git/: gitOps.ts
src/report/: report.ts
src/util/: concurrency.ts  json.ts
test/: json.test.ts  scoring.test.ts
